--- a/DrawingLibrary/DrawingLibrary.csproj
+++ b/DrawingLibrary/DrawingLibrary.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.*">
+    <ProjectReference Include="..\ShapeLibrary\ShapeLibrary.csproj" />
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
