Fix the testing for particles

--- a/FireworksTests/FireworksTests.csproj
+++ b/FireworksTests/FireworksTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -10,9 +10,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="MSTest" Version="3.6.4" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.6.4" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Fireworks\Fireworks.csproj" />
     <ProjectReference Include="..\ShapeLibrary\ShapeLibrary.csproj" />
   </ItemGroup>
 
