--- a/Fireworks/Fireworks.csproj
+++ b/Fireworks/Fireworks.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ShapeLibraryTests\ShapeLibraryTests.csproj" />
+    <ProjectReference Include="..\ShapeLibrary\ShapeLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
