--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,10 +20,10 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore Fireworks.sln
 
       - name: Build
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build Fireworks.sln --configuration Release --no-restore
 
       - name: Publish build
         run: dotnet publish FireworksSimulator/FireworksSimulator.csproj --configuration Release --output ./publish
